syntax = "proto3";

option csharp_namespace = "WindPowerPlatformService";

service GrpcWindPowerPlatform {
    rpc GetAllWindPowerPlatforms (GetAllRequest) returns (WindPowerPlatformResponse);
}

message GetAllRequest {}

message GrpcWindPowerPlatformModel{
    int32 platformId = 1;   
    string name = 2;
    string manufacturer = 3;
    string description = 4;
}

message WindPowerPlatformResponse {
    repeated GrpcWindPowerPlatformModel platform = 1;
}
